--- a/src/views/UnauthenticatedApp/styles.css
+++ b/src/views/UnauthenticatedApp/styles.css
@@ -46,7 +46,7 @@ body.theme-light .unauthenticated-container {
 .hero-subheadline {
   color: rgba(255, 255, 255, 0.85);
   line-height: 1.4;
-  margin-bottom: 2rem;
+  padding-bottom: 2rem;
   font-weight: 400;
   text-shadow: 0 1px 10px rgba(0, 0, 0, 0.4);
 }
